--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class=" portfolio-line" >
         <div class="container page-header-container">
         <nav class="page-nav">
-            <a class="logotyp link" href="./index.html">Web<sp class="part-logo">Studio</sp>
+            <a class="logotyp link" href="./index.html">Web<span class="part-logo">Studio</span>
             </a>
             <ul class="menu list ">
                 <li class=" menu-item"> 
@@ -331,7 +331,7 @@
     <footer class="link footer">
         <div class="container location-footer">
             <div>
-          <a class="logotyp-footer link" href=""><span class="part-logo">Web</span>Studio</a>
+          <a class="logotyp-footer link" href=""><span class="part-logo-footer">Web</span>Studio</a>
           <address>
             <ul class="list ">
                 <li class="location-address" >
@@ -348,28 +348,28 @@
           <div class="footer-icon  link location-footer-media"> 
             <p class="media">присоединяйтесь</p>
             <ul class="icon-list-footer  list">
-                <li class="media-footer ">
+                <li class=" ">
                     <a class="media-footer" href="">
                                 <svg width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-instagram"></use>
                                 </svg>
                                 </a>
                             </li>
-                <li class=" media-footer">
+                <li class="">
                     <a class="media-footer" href="">
                                 <svg  width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-twitter"></use>
                                 </svg>
                                 </a>
                             </li>
-                <li class=" media-footer">   
+                <li class=" ">   
                     <a class="media-footer" href="">
                                 <svg  width="20"  height="20" >
                                     <use href="./images svg/sprite.svg#icon-facebook"></use>
                                 </svg>
                                 </a>
                             </li>
-                <li class=" media-footer">  
+                <li class=" ">  
                     <a class="media-footer" href="">
                         <svg width="20"  height="20">
                             <use href="./images svg/sprite.svg#icon-linkedin"></use>
