--- a/index portfolio.html
+++ b/index portfolio.html
@@ -24,7 +24,7 @@
                     <a class="menu-link link" href="./index.html">Студия</a>
                 </li>
                 <li class=" menu-item">
-                    <a class="menu-link link" href="index portfolio.html">Портфолио</a>
+                    <a class="menu-link  current-portfolio link" href="index portfolio.html">Портфолио</a>
                 </li>
                 <li class=" menu-item">
                     <a class="menu-link link" href="">Контакты</a>
@@ -61,55 +61,123 @@
             </ul>
            
             <ul class="list  menu-portfolio container">
-                <li class=" list-menu indent menu-card"> <img src="./images portfolio/photo-one.jpg" alt="сотрудники">
-                <div class="name-card">
+                <li class="indent list-menu  menu-card"> 
+                <a href="#" class="team-list-link-wrapper link">
+                    <div class="team-list-img-wraper"> <img src="./images portfolio/photo-one.jpg" alt="сотрудники">
+                    <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+                    <div class="name-card">
                 <p class="service-name">Технокряк</p>
                 <p class="direction">Веб-сайт</p>
                 </div>
+                </a>
             </li>
-                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-two.jpg" alt="баскетболисты">
+                <li class="indent list-menu  menu-card">
+                <a href="#" class="team-list-link-wrapper link">
+                    <div class="team-list-img-wraper"> <img src="./images portfolio/photo-two.jpg" alt="баскетболисты">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                 <div class="name-card">
                 <p class="service-name">Постер New Orlean vs Golden Star</p>
                 <p class="direction">Дизайн</p>
                 </div>
+                </a>
             </li>
-                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-three.jpg" alt="логотип ресторана">
-                <div class="name-card">
+                <li class="list-menu indent menu-card">
+                    <a href="#" class="team-list-link-wrapper link"> 
+                        <div class="team-list-img-wraper"> <img src="./images portfolio/photo-three.jpg" alt="логотип ресторана">
+                <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                    відвідувачу отримати
+                    вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
+                        <div class="name-card">
                 <p class="service-name">Ресторан Seafood</p>
                 <p class="direction">Приложение</p>
                 </div>
+                </a>
             </li>
-                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-four.jpg" alt="наушники">
+                <li class="list-menu indent menu-card"> 
+                    <a href="#" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wraper">
+                        <img src="./images portfolio/photo-four.jpg" alt="наушники">
+                        <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                    </a>
                 <div class="name-card">
                 <p class="service-name">Проект Prime</p>
                 <p class="direction">Маркетинг</p>
                 </div>
             </li>
-                <li class="list-menu indent  menu-card"> <img src="./images portfolio/photo-five.jpg" alt="коробки">
+                <li class="list-menu indent  menu-card"> 
+                    <a href="#" class="team-list-link-wrapper link">
+                    <div class="team-list-img-wraper">
+                    <img src="./images portfolio/photo-five.jpg" alt="коробки">
+                    <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                        відвідувачу отримати
+                        вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
+                    </a>
                 <div class="name-card">
                 <p class="service-name">Проект Boxes</p>
                 <p class="direction">Приложение</p>
                 </div>
             </li>
-                <li class="list-menu indent menu-card"> <img src="./images portfolio/photo-six.jpg" alt="монитор">
+                <li class="list-menu indent menu-card"> 
+                    <a href="#" class="team-list-link-wrapper link">
+                    <div class="team-list-img-wraper">
+                    <img src="./images portfolio/photo-six.jpg" alt="монитор">
+                    <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                        відвідувачу отримати
+                        вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
+                    </a>
                 <div class="name-card">
                 <p class="service-name" lang="en">Inspiration has no Borders</p>
                 <p class="direction">Веб-сайт</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-seven.jpg" alt="журнал">
+                <li class="list-menu menu-card">
+                    <a href="#" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wraper">
+                         <img src="./images portfolio/photo-seven.jpg" alt="журнал">
+                        <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.</p>
+                        </div>
+                        </a>
                 <div class="name-card">
                 <p class="service-name">Издание Limited Edition</p>
                 <p class="direction">Дизайн</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-eight.jpg" alt="бирка">
+                <li class="list-menu menu-card"> 
+                    <a href="#" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wraper">
+                        <img src="./images portfolio/photo-eight.jpg" alt="бирка">
+                        <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                            відвідувачу отримати
+                            вичерпні відомості про компанію чи приватну особу.</p>
+                        </div>
+                        </a>
                 <div class="name-card">
                 <p class="service-name">Проект LAB</p>
                 <p class="direction">Маркетинг</p>
                 </div>
             </li>
-                <li class="list-menu menu-card"> <img src="./images portfolio/photo-nine.jpg" alt="ноутбук">
+                <li class="list-menu menu-card"> 
+                    <a href="#" class="team-list-link-wrapper link">
+                        <div class="team-list-img-wraper">
+                            <img src="./images portfolio/photo-nine.jpg" alt="ноутбук">
+                            <p class="overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                відвідувачу отримати
+                                вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
+                            </a>
                 <div class="name-card">
                 <p class="service-name" lang="en">Growing Business</p>
                 <p class="direction">Приложение</p>
